--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blow the candles</title>
+    <title>Feliz San Valentín</title>
 
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1>Blow your candles!</h1>
+    <h1>Feliz Dia de San Valentín!</h1>
 
     <p>Number of candles: <span id="candles-counter">0</span></p>
     <div class="cake-container" id="cake">
